# prxlife_ImpactFactor

./: .gitignore  README.md  pyproject.toml
artifacts/: prx-life-2025-denominator.csv  prx-life-2025-final-report.md  prx-life-2025-numerator.csv  prx-life-2025-report.md  prx-life-2025-summary.json
artifacts/raw/: crossref_journal.json  openalex_source.json  openalex_works_2023.json  openalex_works_2024.json
src/prxlife_impact_factor/: __init__.py  api.py  cli.py  pipeline.py
tests/: test_pipeline.py
tests/fixtures/: crossref_journal.json  openalex_source.json  openalex_works_2023.json  openalex_works_2024.json
