[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prxlife-impact-factor"
version = "0.1.0"
description = "Reproducible open-data JIF proxy calculation for PRX Life"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Joshua Shaevitz" }
]
dependencies = []

[project.scripts]
calculate_jif_proxy = "prxlife_impact_factor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
